--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,9 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.13.3'
     implementation 'org.rocksdb:rocksdbjni:6.29.5'
-//    implementation "ch.qos.logback:logback-classic:1.2.11"
+    implementation "ch.qos.logback:logback-classic:1.2.11"
     implementation 'org.apache.kafka:kafka-streams:7.1.1-ccs'
     implementation 'org.apache.avro:avro:1.8.2'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
